--- a/bootstrap.html
+++ b/bootstrap.html
@@ -6,19 +6,19 @@
         <script>
             console.log('JS is running...');
         </script>
-        <script type="text/javascript" src="myjs.js"></script>
+        
     </head>
     <body> 
 
         <div class="container">
             <div class="row bg-info bg-opacity-50">
-                <div class="col-12">
+                <div class="col-12" id="heading">
                     Header
                 </div>
             </div>
             <div class="row ">
                 <div class="col-sm-12 col-lg-4 bg-secondary bg-opacity-50">
-                    <button class="btn btn-primary">Button</button>
+                    <button class="btn btn-primary" onclick="clickfn()">Button</button>
 
                 </div>
                 <div class="col-sm-12 col-lg-8 bg-primary bg-opacity-50">
@@ -31,6 +31,6 @@
                 </div>
             </div>
         </div>
-
+        <script type="text/javascript" src="myjs.js"></script>
     </body>
 </html>
